olm/resources/prometheus/application/01-dep.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "spring-boot-monitoring"
  name: "spring-boot-monitoring"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "spring-boot-monitoring"
  template:
    metadata:
      labels:
        app: "spring-boot-monitoring"
    spec:
      containers:
        - env:
            - name: "KUBERNETES_NAMESPACE"
              valueFrom:
                fieldRef:
                  fieldPath: "metadata.namespace"
          image: cmoulliard/spring-boot-prometheus
          imagePullPolicy: "Always"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/actuator/info"
              port: 8080
              scheme: "HTTP"
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: "spring-boot-monitoring"
          ports:
            - containerPort: 8080
              name: "http"
              protocol: "TCP"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: "HTTP"
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
