olm/resources/prometheus/application/02-svc.yml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "spring-boot-monitoring"
  name: "spring-boot-monitoring"
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: "spring-boot-monitoring"
  type: "ClusterIP"
